# ChangeLog for media-libs/schroedinger
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/schroedinger/ChangeLog,v 1.26 2009/04/05 22:51:42 yngwin Exp $

*schroedinger-1.0.6 (05 Apr 2009)

  05 Apr 2009; Ben de Groot <yngwin@gentoo.org> +schroedinger-1.0.6.ebuild:
  Version bump

  08 Mar 2009; Joshua Kinard <kumba@gentoo.org> schroedinger-1.0.5.ebuild:
  Added ~mips to KEYWORDS.

  22 Dec 2008; Raúl Porcel <armin76@gentoo.org> schroedinger-1.0.5.ebuild:
  arm stable

  10 Nov 2008; Raúl Porcel <armin76@gentoo.org> schroedinger-1.0.5.ebuild:
  ia64 stable

  10 Nov 2008; Raúl Porcel <armin76@gentoo.org> schroedinger-1.0.5.ebuild:
  Add ~ia64 wrt #241908

  08 Nov 2008; Tobias Klausmann <klausman@gentoo.org>
  schroedinger-1.0.5.ebuild:
  Stable on alpha, bug #239130

  06 Nov 2008; Ferris McCormick <fmccor@gentoo.org>
  schroedinger-1.0.5.ebuild:
  Sparc stable, part of Bug #245774.

  30 Oct 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  schroedinger-1.0.5.ebuild:
  ppc stable, bug #239130

  21 Oct 2008; Markus Rothe <corsair@gentoo.org> schroedinger-1.0.5.ebuild:
  Stable on ppc64; bug #239130

  20 Oct 2008; Guy Martin <gmsoft@gentoo.org> schroedinger-1.0.5.ebuild:
  hppa stable, #239130

  19 Oct 2008; Markus Meier <maekke@gentoo.org> schroedinger-1.0.5.ebuild:
  amd64/x86 stable, bug #239130

  16 Sep 2008; Jeroen Roovers <jer@gentoo.org> schroedinger-1.0.5.ebuild:
  Marked ~hppa (bug #234629).

  31 Aug 2008; Tobias Klausmann <klausman@gentoo.org>
  schroedinger-1.0.5.ebuild:
  Keyworded on alpha, bug #235636

  28 Aug 2008; Friedrich Oslage <bluebird@gentoo.org>
  schroedinger-1.0.5.ebuild:
  Add ~sparc keyword, bug #235636

  24 Aug 2008; Markus Rothe <corsair@gentoo.org> schroedinger-1.0.5.ebuild:
  Added ~ppc64; bug #234629

  17 Aug 2008; Alexis Ballier <aballier@gentoo.org>
  schroedinger-1.0.5.ebuild:
  keyword ~x86-fbsd

*schroedinger-1.0.5 (20 Jul 2008)
