@@ -1,6 +1,8 @@
 DIST schroedinger-1.0.5.tar.gz 828150 RMD160 a957c8322182b2780a35b6b085b430523332518b SHA1 a2ee0dabfc75b0c53c0c9acf8c6f60d91d279c26 SHA256 bbb73ebc3a22f53e75dfbaa1718eebcc5a3619bb200b50df42d5377b99ebf4d4
 DIST schroedinger-1.0.6.tar.gz 877046 RMD160 b3407d25399a538a4fc998f0c0e1151e6946c9f3 SHA1 fcdf65a7b2610c1fd37e4f65363e40b1732ed350 SHA256 ea15177461b36119daf30a80297bc1438e519031c92fdac51c8f609a7f26f8a5
+DIST schroedinger-1.0.7.tar.gz 877696 RMD160 07e01d82fec882f66ff4046e69ce83dc2fb65970 SHA1 87da84f942668249f96a42d4b85c13743e8b2c07 SHA256 a1be06dbd7e996ea6034560fe8af5cd30ffdc4a1892d1f79a4262feee1c46b00
 EBUILD schroedinger-1.0.5.ebuild 1019 RMD160 d344c2d1f4b8cdd3022faf044c8530c2245c14fa SHA1 7da10c94d6c7436fce97bcaecc143bc152ebc05b SHA256 eb9d82ed51734e0165c8b490c88a2c09c745455b155c92942b0b97ecdff5f1a6
 EBUILD schroedinger-1.0.6.ebuild 1019 RMD160 d75fe11b85ae2cb4522d5a05a643b83309ca3fc7 SHA1 15687e7144ea8c00f0026ea4bd23bcf4b395c382 SHA256 2b9bed33afb65be8228b445aeb9294b88ee05b93f995c398a1a86beb6180cc66
-MISC ChangeLog 3770 RMD160 62fafc056d979b312f1073578eab63e04be593a0 SHA1 7c5a978f482d82c1a0efe9f2343f9e3c5c0cee9b SHA256 967a329bb6ffd2e9021ec2122818b79474eaca4ef6ae41612d2709dbb0e44d0f
+EBUILD schroedinger-1.0.7.ebuild 1052 RMD160 7a415dbc77f8c1ea98f586b04c358e3d41c31b3d SHA1 a777c4924fa6ed718c51f72b61f4bd5786fa066e SHA256 58ce6002ad94ee9e5319827db8a3590ebc54eb5b923c15937e147d454873ae9e
+MISC ChangeLog 3901 RMD160 52a20070c76f17e640d08222013d2cefe0556f73 SHA1 0af6e27218a6db36115fb1a0a96bc6a7deeff387 SHA256 1d8d69814d82ecb541a90d18abe74017f67da57abaa6fb45d8869522086f6d0c
 MISC metadata.xml 275 RMD160 42f439fba1a5e257faae1816b9cc0fc18219fed5 SHA1 34ecd51be9f76b4637d91138641106513f18b685 SHA256 3ae7db9576ba39c1c15c3375d308fd166ca5e49a4d59451422bd5b3b20d58184
